@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+15-Oct-2009 Hannes Papenberg
+# Fixed saving in com_modules
+
 14-Oct-2009 Elin Waring
 # Fix link creation when the layout is not called default. 
 # Update/add access code for weblinks and contacts.  Fix typos.
